# frame-analyzer-ebpf

./: Cargo.toml  NOTICES  README.md
.github/workflows/: build-doc.yml
.vim/: coc-settings.json
examples/simple-analyzer/: Cargo.toml
examples/simple-analyzer/src/: main.rs
frame-analyzer/: .gitignore  Cargo.toml  build.rs
frame-analyzer-ebpf/: Cargo.toml
frame-analyzer-ebpf-common/: Cargo.toml
frame-analyzer-ebpf-common/src/: lib.rs
frame-analyzer-ebpf-ebpf/: Cargo.toml
frame-analyzer-ebpf-ebpf/src/: main.rs
frame-analyzer-ebpf/src/: lib.rs  main.rs
frame-analyzer/src/: analyze_target.rs  ebpf.rs  error.rs  lib.rs  uprobe.rs
xtask/src/: build_ebpf.rs  run.rs
