[workspace]
resolver = "2"
members = ["frame-analyzer", "frame-analyzer-ebpf-common", "examples/simple-analyzer"]

[workspace.package]
edition = "2021"
version = "0.3.3"
authors = ["shadow3aaa@github.com"]
repository = "https://github.com/shadow3aaa/frame-analyzer-ebpf"
readme = "README.md"
description = "Track the frametime of Android apps, based on ebpf & uprobe"
license = "GPL-3.0"
documentation = "https://shadow3aaa.github.io/frame-analyzer-ebpf"
