[package]
name = "frame-analyzer-ebpf-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { version = "0.13.1", optional = true }

[lib]
path = "src/lib.rs"
