[package]
name = "frame-analyzer-ebpf"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aya-ebpf = "0.1.0"
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common" }

[[bin]]
name = "frame-analyzer-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
