[package]
name = "frame-analyzer-ebpf"
edition = "2024"
version = "0.2.0"
authors = ["shadow3aaa@github.com"]
repository = "https://github.com/shadow3aaa/frame-analyzer-ebpf"
description = "The ebpf part of frame-analyzer"
license = "GPL-3.0"

[dependencies]
aya-ebpf = "0.1.1"
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common", version = "0" }

[[bin]]
name = "frame-analyzer-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
