[package]
name = "frame-analyzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12.0"
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
thiserror = "1.0.58"
ctor = "0.2.8"
mio = { version = "0.8.11", features = ["os-ext"] }

[build-dependencies]
anyhow = "1"
