[package]
name = "frame-analyzer"
readme.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aya = "0.12.0"
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common", features = ["user"], version = "0" }
anyhow = "1"
libc = "0.2"
thiserror = "1.0.58"
ctor = "0.2.8"
mio = { version = "0.8.11", features = ["os-ext"] }

[build-dependencies]
anyhow = "1"
