[package]
name = "frame-analyzer"
readme.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aya = "0.13.1"
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common", features = ["user"], version = "0" }
anyhow = "1"
libc = "0.2"
thiserror = "2.0.11"
ctor = "0.4.0"
ctrlc = "3.4.4"
mio = { version = "1.0.3", features = ["os-ext"] }

[build-dependencies]
anyhow = "1.0.96"
